tests/expectations/compiler/constants/const_type_error_fail.out
Error [ETYC0372023]: Tuples must be explicitly typed in Leo
    --> compiler-test:6:23
     |
   6 |         const B: u8 = ((1u8,1u8),1u8);
     |                       ^^^^^^^^^^^^^^^
     |
     = The function definition must match the function return statement
